# eng-dados-google-cloud

./: README.md
Cloud Storage/interact_with_gcs/interact_with_gcs/: read_objects.py
Cloud_Storage/: apoena.txt
Cloud_Storage/interact_with_gcs/: pyproject.toml
Projeto 02 - Ingestão de Dados de API/: deploy_cloud_function.sh
Projeto 03 - API Privada no Cloud Run/api_cloudrun/: main.py
Projeto 03 - API Privada no Cloud Run/test_api_apoena/test_api_apoena/: .env  main.py
Projeto02_Ingestão_de_Dados_de_API/: env.yaml
Projeto02_Ingestão_de_Dados_de_API/function_to_ingest_data/: api_connector.py  main.py  requirements.txt
Projeto03_API_Privada_no_Cloud_Run/api_cloudrun/: Dockerfile  cloudbuild.yaml  requirements.txt
Projeto03_API_Privada_no_Cloud_Run/test_api_apoena/: pyproject.toml
Pub Sub/pubsub/: form.py  processor_2.py
api_cloudrun/: Dockerfile  cloudbuild.yaml  main.py  requirements.txt
api_cloudrun/src/: cloud_storage.py  secret_manager.py
api_gateway/: apigateway-spec.yaml
cloud-storage/interact_with_gcs/interact_with_gcs/: teste.csv
function-csv-to-sheet/: deploy_cloud_function.sh  pyproject.toml
function-csv-to-sheet/function_csv_to_sheet/: main.py  requirements.txt  sheet_connector.py
function_to_ingest_data/: pyproject.toml
pubsub/: pyproject.toml
pubsub/pubsub/: processor_1.py
test_api_apoena/: pyproject.toml
test_api_apoena/test_api_apoena/: main.py
